# gbaby

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  cli.mjs  gbaby.toml  package.json
benchmarks/: README.md  run.sh
brain/: BRAIN.md
brain/templates/: decision.md  idea.md  person.md
crates/gbaby-quant/: Cargo.toml
crates/gbaby-quant/src/: lib.rs
integrations/aider/: AIDER.md  aider_conventions.md
integrations/claude/: CLAUDE.md  settings.json
integrations/codex/: CODEX.md  codex_instructions.md
integrations/gemini/: GEMINI.md  gemini_config.json
integrations/opencode/: OPENCODE.md  opencode_instructions.md
marketing/: linkedin_posts.md
scripts/: doctor.ps1  doctor.sh  setup.ps1  setup.sh
stack/roles/: ceo.md  eng-manager.md  qa.md
