[package]
name = "gbaby-quant"
description = "TurboQuant with brains — auto-detecting CUDA/Metal/CPU compression for the GBaby stack"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["cpu"]
cpu = []
cuda = ["dep:cudarc"]
metal = ["dep:metal", "dep:objc"]
# Enable all backends — runtime picks the best available
all = ["cpu", "cuda", "metal"]

[dependencies]
turbo-quant = "0.1"
thiserror = "2"
tracing = "0.1"

# Optional GPU backends
cudarc = { version = "0.16", optional = true }
metal = { version = "1.1", optional = true }
objc = { version = "0.2", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }

[[bench]]
name = "compress"
harness = false
